--- a/src/components/Navigation/Toolbar/Toolbar.css
+++ b/src/components/Navigation/Toolbar/Toolbar.css
@@ -1,7 +1,7 @@
 .Toolbar {
   height: 56px;
   width: 100%;
-  postition: fixed;
+  position: fixed;
   top: 0;
   left: 0;
   background-color: #703b09;
@@ -19,4 +19,10 @@
 
 .Logo {
   height: 80%;
+}
+
+@media(max-width: 499px) {
+  .DesktopOnly {
+    display: none;
+  }
 }
